[package]
name = "day05"
version = "0.1.0"
authors = ["Kevin M Granger <git@kevinmgranger.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode/" }
anyhow = "1.0.25"

[features]
part2 = []